--- a/slides/05_collaboration.qmd
+++ b/slides/05_collaboration.qmd
@@ -71,10 +71,10 @@ Photo from <a href="https://unsplash.com/@timmossholder?utm_source=unsplash&utm_
 
 ```{mermaid}
 flowchart LR
-  A[<font size=4> Shuang v1] --> B[<font size=4> Shuang v2]
-  B --> C[<font size=4> Shuang v3]
-  B --> D[<font size=4> Joe v1]
-  D --> E[<font size=4> Joe + Shuang v4]
+  A[<font size=4> Daniel v1] --> B[<font size=4> Daniel v2]
+  B --> C[<font size=4> Daniel v3]
+  B --> D[<font size=4> Ryan v1]
+  D --> E[<font size=4> Ryan + Daniel v4]
   C --> E
 ```
 
@@ -321,25 +321,25 @@ gitGraph
 
 ```{mermaid}
 sequenceDiagram
-    participant S as Shuang
+    participant A as Daniel
     participant GH as GitHub server
-    participant J as Joe
-    S->>S: make change locally & commit to <feature>
-    S->>GH: push commit
-    S->>GH: open pull request
+    participant B as Ryan
+    A->>A: make change locally & commit to <feature>
+    A->>GH: push commit
+    A->>GH: open pull request
     GH->>GH: run automated checks
-    S->>J: request review
-    J->>J: review code
-    J->>S: request changes
-    S->>S: implement changes locally & commit
-    S->>GH: push commit
+    A->>B: request review
+    B->>B: review code
+    B->>A: request changes
+    A->>A: implement changes locally & commit
+    A->>GH: push commit
     GH->>GH: run automated checks
-    S->>J: request review
-    J->>J: review code
-    J->>GH: approve changes, unblocking merge
-    S->>GH: merge <feature> into <main>
+    A->>B: request review
+    B->>B: review code
+    B->>GH: approve changes, unblocking merge
+    A->>GH: merge <feature> into <main>
     GH->>GH: run automated checks on <main>
-    J->>GH: pull newest version of <main>
+    B->>GH: pull newest version of <main>
 ```
 
 ## Looks awefully complicated, why?
