--- a/slides/03_workflow.qmd
+++ b/slides/03_workflow.qmd
@@ -194,8 +194,7 @@ ggplot(effortData, aes(x = "", y = prop, fill = class)) +
 :::
 :::
 
-[^1]: See also [Ensuring Quality](04_quality.html) by
-    [Joe](https://github.com/shajoezhu)
+[^1]: See also [Ensuring Quality](04_quality.html)
 
 ## Why practice good engineering?
 
@@ -220,10 +219,8 @@ pexels.com]{.copyright}](thumbnails/workflow3.jpg){fig-align="center"}
 1.  Idea
 2.  Design docs
 3.  R package programming
-4.  Quality check (see [Ensuring Quality](04_quality.html) by
-    [Joe](https://github.com/shajoezhu))
-5.  Publication (see [Publication](06_publication.html) by
-    [Liming](https://github.com/clarkliming))
+4.  Quality check (see [Ensuring Quality](04_quality.html))
+5.  Publication (see [Publication](06_publication.html))
 6.  Use in production
 
 ## Example - Step 1: Idea
@@ -306,15 +303,13 @@ UML Diagram
 
 **R package programming**
 
-1.  Create basic package project (see [R Packages](02_r_packages.html) by
-    [Liming](https://github.com/clarkliming))
+1.  Create basic package project (see [R Packages](02_r_packages.html))
 2.  C&P existing R scripts (one-off scripts, prototype functions) and
     refactor[^6] it if necessary
 3.  Create R generic functions
 4.  Document all functions
 
-[^6]: See also [Ensuring Quality](04_quality.html) by
-    [Joe](https://github.com/shajoezhu)
+[^6]: See also [Ensuring Quality](04_quality.html)
 
 ## Example - Step 3: Packaging
 
