hide license footer from listing

--- a/slides/02_r_packages.qmd
+++ b/slides/02_r_packages.qmd
@@ -324,4 +324,4 @@ export(my_sum)
   Liming Li [`r fontawesome::fa("github")`](https://github.com/clarkliming)
 - In the current version, changes were done by (later authors): 
   TODO: FILL IN, OR IF NOT APPLICABLE DELETE THIS BULLET
-{{< include license_footer.qmd >}}
+{{< include _license_footer.qmd >}}
