--- a/slides/03_workflow.qmd
+++ b/slides/03_workflow.qmd
@@ -580,4 +580,4 @@ Document your functions with
   Friedrich Pahlke [`r fontawesome::fa("github")`](https://github.com/fpahlke/) [`r fontawesome::fa("linkedin")`](https://www.linkedin.com/in/pahlke/)
 - In the current version, changes were done by (later authors): 
   TODO: FILL IN, OR IF NOT APPLICABLE DELETE THIS BULLET
-{{< include license_footer.qmd >}}
+{{< include _license_footer.qmd >}}
