--- a/slides/05_collaboration.qmd
+++ b/slides/05_collaboration.qmd
@@ -375,4 +375,4 @@ sequenceDiagram
   Daniel Sabanes Bove 
   [`r fontawesome::fa("github")`](https://github.com/danielinteractive/) 
   [`r fontawesome::fa("linkedin")`](https://www.linkedin.com/in/danielsabanesbove/)
-{{< include license_footer.qmd >}}
+{{< include _license_footer.qmd >}}
