--- a/slides/06_publication.qmd
+++ b/slides/06_publication.qmd
@@ -245,4 +245,4 @@ Use the same repository created from template [https://github.com/kkmann/simulat
   Daniel Sabanes Bove [`r fontawesome::fa("github")`](https://github.com/danielinteractive/) [`r fontawesome::fa("linkedin")`](https://www.linkedin.com/in/danielsabanesbove/),
   Friedrich Pahlke [`r fontawesome::fa("github")`](https://github.com/fpahlke/) [`r fontawesome::fa("linkedin")`](https://www.linkedin.com/in/pahlke/),
   Liming Li [`r fontawesome::fa("github")`](https://github.com/clarkliming)
-{{< include license_footer.qmd >}}
+{{< include _license_footer.qmd >}}
