--- a/slides/08_conclusion.qmd
+++ b/slides/08_conclusion.qmd
@@ -99,4 +99,4 @@ image: thumbnails/conclusion.jpg
 
 - Creators (initial authors): 
   Daniel Sabanes Bove [`r fontawesome::fa("github")`](https://github.com/danielinteractive/) [`r fontawesome::fa("linkedin")`](https://www.linkedin.com/in/danielsabanesbove/)
-{{< include license_footer.qmd >}}
+{{< include _license_footer.qmd >}}
