--- a/slides/03_workflow.qmd
+++ b/slides/03_workflow.qmd
@@ -580,5 +580,5 @@ Document your functions with
 - Creators (initial authors): 
   Friedrich Pahlke [`r fontawesome::fa("github")`](https://github.com/fpahlke/) [`r fontawesome::fa("linkedin")`](https://www.linkedin.com/in/pahlke/)
 - In the current version, changes were done by (later authors): 
-  TODO: FILL IN, OR IF NOT APPLICABLE DELETE THIS BULLET
+  Andrew Bean [`r fontawesome::fa("github")`](https://github.com/andrew-bean) [`r fontawesome::fa("linkedin")`](https://www.linkedin.com/in/andrew-bean-83539116/)
 {{< include _license_footer.qmd >}}
