9: Andrew's slide edits (#11)

--- a/slides/02_r_packages.qmd
+++ b/slides/02_r_packages.qmd
@@ -115,7 +115,7 @@ NULL
 ## `man` Folder
 
 - Contains documentation files for the objects in the package in the `.Rd` format
-  - The syntax is a bit similar like `LaTeX`
+  - The syntax is a bit similar to `LaTeX`
 - All user level objects should be documented
 - Internal objects don't need to be documented, but may be (and I would recommend it)
 - Once upon a time, developers would set up these `.Rd` files and the `NAMESPACE` manually. `r emoji::emoji("yawning_face")`
@@ -322,6 +322,3 @@ export(my_sum)
 - Creators (initial authors): 
   Daniel Sabanes Bove [`r fontawesome::fa("github")`](https://github.com/danielinteractive/) [`r fontawesome::fa("linkedin")`](https://www.linkedin.com/in/danielsabanesbove/),
   Liming Li [`r fontawesome::fa("github")`](https://github.com/clarkliming)
-- In the current version, changes were done by (later authors): 
-  TODO: FILL IN, OR IF NOT APPLICABLE DELETE THIS BULLET
-{{< include _license_footer.qmd >}}
