--- a/slides/02_r_packages.qmd
+++ b/slides/02_r_packages.qmd
@@ -322,3 +322,4 @@ export(my_sum)
 - Creators (initial authors): 
   Daniel Sabanes Bove [`r fontawesome::fa("github")`](https://github.com/danielinteractive/) [`r fontawesome::fa("linkedin")`](https://www.linkedin.com/in/danielsabanesbove/),
   Liming Li [`r fontawesome::fa("github")`](https://github.com/clarkliming)
+{{< include _license_footer.qmd >}}
